# txguard

./: .gitignore  AGENTS.md  Dockerfile  FRONTEND.md  PRD.md  Plan.md  README.md  build.ps1  build.sh  demo.py  deploy.md  docker-compose.yml  walkthrough.md
docker/: nginx.conf  seed.py  supervisord.conf
infra/: main.tf  resources.tf  terraform.tfvars.example  variables.tf
txguard-api/: Dockerfile  main.py  pyproject.toml
txguard-api/.pytest_cache/v/cache/: nodeids
txguard-api/agents/: crew.py
txguard-api/agents/rag/: store.py
txguard-api/agents/tools/: compliance_tools.py  rag_tools.py  transaction_tools.py
txguard-api/api/: config.py  database.py  dependencies.py  main.py  realtime.py  test_api.py
txguard-api/api/models/: alert.py  audit.py  report.py  transaction.py
txguard-api/api/routers/: alerts.py  model.py  reports.py  transactions.py
txguard-api/api/schemas/: alert.py  model.py  report.py  transaction.py
txguard-api/data/: seed_transactions.py  synthetic_gen.py
txguard-api/ml/: explainer.py  features.py  rules_engine.py  scorer.py  test_scorer.py  train.py
txguard-api/pipelines/: prefect_flows.py
txguard-api/workers/: celery_app.py
txguard-frontend/: Dockerfile  package-lock.json  package.json
txguard-frontend/src/app/: globals.css  layout.tsx
txguard-frontend/src/app/dashboard/: layout.tsx  page.tsx
txguard-frontend/src/components/dashboard/: KpiCard.tsx  LiveAlertFeed.tsx  ScoreDistChart.tsx  TierBreakdown.tsx  VolumeChart.tsx
txguard-frontend/src/hooks/: useAlertWebSocket.ts
(+11 files in other folders)
