[project]
name = "txguard-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.1.1",
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
